--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
         "deepmerge": "^4.2.2",
         "pdfobject": "^2.2.5",
         "sass": "^1.32.8",
+        "postcss": "^8.2.10",
         "sass-loader": "^11.0.1",
         "sql.js": "^1.5.0",
         "terser-webpack-plugin": "^5.1.1",
@@ -32,7 +33,7 @@
         "vue-cookie-law": "^1.13.3",
         "vue-loader": "^15.9.6",
         "vue-router": "^3.5.1",
-        "webpack": "5.0.0",
+        "webpack": "5.1.1",
         "webpack-cli": "4"
     }
 }
