--- a/web/package.json
+++ b/web/package.json
@@ -11,28 +11,29 @@
         "webviewer/watch": "webpack --config src/webviewer/webpack.config.js --progress"
     },
     "dependencies": {
-        "@babel/core": "^7.13.10",
-        "vue-template-compiler": "^2.6.12",
-        "vuetify": "^2.4.7",
-        "vuetify-loader": "^1.7.2"
+        "@babel/core": "7.13.10",
+        "copy-webpack-plugin": "^9.0.1",
+        "vue-template-compiler": "2.6.12",
+        "vuetify": "2.4.7",
+        "vuetify-loader": "1.7.2"
     },
     "devDependencies": {
-        "axios": "^0.21.2",
-        "babel-core": "^6.26.3",
-        "babel-loader": "^8.2.2",
-        "css-loader": "^5.1.3",
-        "deepmerge": "^4.2.2",
-        "pdfobject": "^2.2.5",
-        "sass": "^1.32.8",
-        "postcss": "^8.2.10",
-        "sass-loader": "^11.0.1",
-        "sql.js": "^1.5.0",
-        "terser-webpack-plugin": "^5.1.1",
-        "vue-cookies": "^1.7.4",
-        "vue": "^2.6.12",
-        "vue-cookie-law": "^1.13.3",
-        "vue-loader": "^15.9.6",
-        "vue-router": "^3.5.1",
+        "axios": "0.24.0",
+        "babel-core": "6.26.3",
+        "babel-loader": "8.2.2",
+        "css-loader": "5.1.3",
+        "deepmerge": "4.2.2",
+        "pdfobject": "2.2.5",
+        "postcss": "8.2.10",
+        "sass": "1.32.8",
+        "sass-loader": "11.0.1",
+        "sql.js": "1.5.0",
+        "terser-webpack-plugin": "5.1.1",
+        "vue": "2.6.12",
+        "vue-cookie-law": "1.13.3",
+        "vue-cookies": "1.7.4",
+        "vue-loader": "15.9.6",
+        "vue-router": "3.5.1",
         "webpack": "5.1.1",
         "webpack-cli": "4"
     }
